Fixes landing page scrolling on small screens.

--- a/sass/_landing.scss
+++ b/sass/_landing.scss
@@ -6,6 +6,8 @@ body.home {
 
 .landing-container {
   @include outer-container;
+  overflow-x: hidden;
+  position: relative;
 
   .landing-background {
     position: absolute;
