--- a/source/_assets/stylesheets/screen.css
+++ b/source/_assets/stylesheets/screen.css
@@ -311,6 +311,8 @@ body.home {
   max-width: 68em;
   margin-left: auto;
   margin-right: auto;
+  overflow-x: hidden;
+  position: relative;
 }
 .landing-container:after {
   content: "";
